# rgo

./: .env  Cargo.toml
src/: auth.rs  db.rs  dbo.rs  error.rs  main.rs  messages.rs  services.rs  users.rs
src/rpel/: certificate.rs  company.rs  contact.rs  department.rs  education.rs  email.rs  error.rs  hideout.rs  hideout_type.rs  kind.rs  phone.rs  post.rs  practice.rs  rank.rs  scope.rs  select.rs  siren.rs  siren_type.rs  tcc.rs  user.rs
