[package]
authors = ["Serbe <mkoctuk@gmail.com>"]
edition = "2018"
name = "rgo"
version = "0.2.1"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
deadpool-postgres = "0.7"
dotenv = "0.15"
env_logger = "0.8"
hyper = {version = "0.14", features = ["http1", "server"]}
log = {version = "0.4", features = ["std"]}
rand = "0.8"
routerify = "2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
#sqlx = {version = "0.5", features = ["macros", "migrate", "postgres", "runtime-tokio-rustls", "time"]}
thiserror = "1.0"
# time = "0.2"
tokio = {version = "1.5", features = ["io-util", "sync", "macros", "rt-multi-thread"]}
tokio-postgres = {version = "0.7", features = ["with-chrono-0_4"]}

